feat : 기본 레이아웃 구성

--- a/week1/TodoList.html
+++ b/week1/TodoList.html
@@ -7,5 +7,21 @@
     <link rel="stylesheet" href="TodoListStyle.css" />
     <title>1주차 과제 투두리스트</title>
   </head>
-  <body></body>
+  <body>
+    <header>투두리스트 함드가자</header>
+    <nav>
+      <button>오늘만 보기</button>
+      <button>내일만 보기</button>
+      <button>함께 보기</button>
+    </nav>
+    <main>
+      <section>
+        <h1>오늘 할 일</h1>
+      </section>
+      <section>
+        <h1>내일 할 일</h1>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
