style : 레이아웃 마무리 및 스타일링

--- a/week1/TodoList.html
+++ b/week1/TodoList.html
@@ -15,11 +15,29 @@
       <button>함께 보기</button>
     </nav>
     <main>
-      <section>
+      <section class="left-section">
         <h1>오늘 할 일</h1>
+        <div class="new-todo">
+          <input type="text" />
+          <button>+</button>
+        </div>
       </section>
-      <section>
+      <section class="right-section">
         <h1>내일 할 일</h1>
+        <ul>
+          <li>
+            심화과제 완성하기
+            <button>X</button>
+          </li>
+          <li>
+            생각과제 하기
+            <button>X</button>
+          </li>
+        </ul>
+        <div class="new-todo">
+          <input type="text" />
+          <button>+</button>
+        </div>
       </section>
     </main>
     <footer></footer>
