feat : 레이아웃 완성

--- a/week1/velog-clone/velogClone.html
+++ b/week1/velog-clone/velogClone.html
@@ -11,15 +11,71 @@
     <header>
       <h1>Velog</h1>
       <section class="menu-section">
+        <img src="./icons/lightmode.svg" alt="lightmode" />
+        <img src="./icons/search.svg" alt="search" />
         <button>로그인</button>
       </section>
     </header>
     <nav>
-      <span>
+      <div>
         <img src="./icons/trending.svg" alt="trending" />
-        트렌딩</span
-      >
-      <span>최신</span>
+        트렌딩
+      </div>
+      <div>
+        <img src="./icons/clock.svg" alt="clock" />
+        최신
+      </div>
     </nav>
+    <main>
+      <article class="article-card">
+        <div class="article-img-wrapper">
+          <img class="article-img" src="./images/꿀잠시루.jpg" alt="siru" />
+        </div>
+        <h2>꿀잠시루</h2>
+        <span>꿀잠을 자는 시루</span>
+      </article>
+      <article class="article-card">
+        <div class="article-img-wrapper">
+          <img class="article-img" src="./images/박스시루.jpg" alt="siru" />
+        </div>
+        <h2>박스시루</h2>
+        <span>박스에 들어간 시루</span>
+      </article>
+      <article class="article-card">
+        <div class="article-img-wrapper">
+          <img class="article-img" src="./images/밥솥시루.jpg" alt="siru" />
+        </div>
+        <h2>밥솥시루</h2>
+        <span>밥솥에 들어간 시루</span>
+      </article>
+      <article class="article-card">
+        <div class="article-img-wrapper">
+          <img class="article-img" src="./images/번뜩시루.jpg" alt="siru" />
+        </div>
+        <h2>번뜩시루</h2>
+        <span>놀라자빠질 표정의 시루</span>
+      </article>
+      <article class="article-card">
+        <div class="article-img-wrapper">
+          <img class="article-img" src="./images/공격시루.jpg" alt="siru" />
+        </div>
+        <h2>공격시루</h2>
+        <span>라이트훅 날리는 시루</span>
+      </article>
+      <article class="article-card">
+        <div class="article-img-wrapper">
+          <img class="article-img" src="./images/낚시시루.jpg" alt="siru" />
+        </div>
+        <h2>낚시시루</h2>
+        <span>낚싯대에 공격당한 시루</span>
+      </article>
+      <article class="article-card">
+        <div class="article-img-wrapper">
+          <img class="article-img" src="./images/만두시루.jpg" alt="siru" />
+        </div>
+        <h2>만두시루</h2>
+        <span>만두처럼생긴 시루</span>
+      </article>
+    </main>
   </body>
 </html>
