style : header, main 스타일링

--- a/week1/velog-clone/velogClone.html
+++ b/week1/velog-clone/velogClone.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Velog</h1>
+      <h1>Siruzipsa</h1>
       <section class="menu-section">
         <img src="./icons/lightmode.svg" alt="lightmode" />
         <img src="./icons/search.svg" alt="search" />
@@ -18,12 +18,12 @@
     </header>
     <nav>
       <div>
-        <img src="./icons/trending.svg" alt="trending" />
-        트렌딩
+        <img class="nav_icon" src="./icons/trending.svg" alt="trending" />
+        <span>트렌딩</span>
       </div>
       <div>
-        <img src="./icons/clock.svg" alt="clock" />
-        최신
+        <img class="nav_icon" src="./icons/clock.svg" alt="clock" />
+        <span>최신</span>
       </div>
     </nav>
     <main>
@@ -31,50 +31,162 @@
         <div class="article-img-wrapper">
           <img class="article-img" src="./images/꿀잠시루.jpg" alt="siru" />
         </div>
-        <h2>꿀잠시루</h2>
-        <span>꿀잠을 자는 시루</span>
-      </article>
-      <article class="article-card">
-        <div class="article-img-wrapper">
-          <img class="article-img" src="./images/박스시루.jpg" alt="siru" />
+        <div class="article_text-wrapper">
+          <h2 class="article_text-title">꿀잠시루</h2>
+          <p class="article_text-content">꿀잠을 자는 시루</p>
+          <span>4일전 · 100개의 댓글</span>
         </div>
-        <h2>박스시루</h2>
-        <span>박스에 들어간 시루</span>
+        <section class="article_detail-info">
+          <div class="article_writer-info">
+            <img src="./images/김형겸_증명사진.jpg" alt="profile" />
+            <span
+              >by
+              <b>Siruzipsa</b>
+            </span>
+          </div>
+          <div class="article_like">
+            <img src="./icons/favorite.svg" alt="Like" />
+            <span>999</span>
+          </div>
+        </section>
       </article>
       <article class="article-card">
         <div class="article-img-wrapper">
           <img class="article-img" src="./images/밥솥시루.jpg" alt="siru" />
         </div>
-        <h2>밥솥시루</h2>
-        <span>밥솥에 들어간 시루</span>
-      </article>
-      <article class="article-card">
-        <div class="article-img-wrapper">
-          <img class="article-img" src="./images/번뜩시루.jpg" alt="siru" />
+        <div class="article_text-wrapper">
+          <h2 class="article_text-title">밥솥시루</h2>
+          <p class="article_text-content">밥솥에 들어간 시루</p>
+          <span>4일전 · 100개의 댓글</span>
         </div>
-        <h2>번뜩시루</h2>
-        <span>놀라자빠질 표정의 시루</span>
+        <section class="article_detail-info">
+          <div class="article_writer-info">
+            <img src="./images/김형겸_증명사진.jpg" alt="profile" />
+            <span
+              >by
+              <b>Siruzipsa</b>
+            </span>
+          </div>
+          <div class="article_like">
+            <img src="./icons/favorite.svg" alt="Like" />
+            <span>999</span>
+          </div>
+        </section>
       </article>
       <article class="article-card">
         <div class="article-img-wrapper">
           <img class="article-img" src="./images/공격시루.jpg" alt="siru" />
         </div>
-        <h2>공격시루</h2>
-        <span>라이트훅 날리는 시루</span>
+        <div class="article_text-wrapper">
+          <h2 class="article_text-title">공격시루</h2>
+          <p class="article_text-content">라이트훅 날리는 시루</p>
+          <span>4일전 · 100개의 댓글</span>
+        </div>
+        <section class="article_detail-info">
+          <div class="article_writer-info">
+            <img src="./images/김형겸_증명사진.jpg" alt="profile" />
+            <span
+              >by
+              <b>Siruzipsa</b>
+            </span>
+          </div>
+          <div class="article_like">
+            <img src="./icons/favorite.svg" alt="Like" />
+            <span>999</span>
+          </div>
+        </section>
+      </article>
+      <article class="article-card">
+        <div class="article-img-wrapper">
+          <img class="article-img" src="./images/박스시루.jpg" alt="siru" />
+        </div>
+        <div class="article_text-wrapper">
+          <h2 class="article_text-title">박스시루</h2>
+          <p class="article_text-content">박스에 들어간 시루</p>
+          <span>4일전 · 100개의 댓글</span>
+        </div>
+        <section class="article_detail-info">
+          <div class="article_writer-info">
+            <img src="./images/김형겸_증명사진.jpg" alt="profile" />
+            <span
+              >by
+              <b>Siruzipsa</b>
+            </span>
+          </div>
+          <div class="article_like">
+            <img src="./icons/favorite.svg" alt="Like" />
+            <span>999</span>
+          </div>
+        </section>
       </article>
       <article class="article-card">
         <div class="article-img-wrapper">
           <img class="article-img" src="./images/낚시시루.jpg" alt="siru" />
         </div>
-        <h2>낚시시루</h2>
-        <span>낚싯대에 공격당한 시루</span>
+        <div class="article_text-wrapper">
+          <h2 class="article_text-title">낚시시루</h2>
+          <p class="article_text-content">낚싯대에게 공격당한 시루</p>
+          <span>4일전 · 100개의 댓글</span>
+        </div>
+        <section class="article_detail-info">
+          <div class="article_writer-info">
+            <img src="./images/김형겸_증명사진.jpg" alt="profile" />
+            <span
+              >by
+              <b>Siruzipsa</b>
+            </span>
+          </div>
+          <div class="article_like">
+            <img src="./icons/favorite.svg" alt="Like" />
+            <span>999</span>
+          </div>
+        </section>
       </article>
       <article class="article-card">
         <div class="article-img-wrapper">
           <img class="article-img" src="./images/만두시루.jpg" alt="siru" />
         </div>
-        <h2>만두시루</h2>
-        <span>만두처럼생긴 시루</span>
+        <div class="article_text-wrapper">
+          <h2 class="article_text-title">만두시루</h2>
+          <p class="article_text-content">샤오롱바오닮은 시루</p>
+          <span>4일전 · 100개의 댓글</span>
+        </div>
+        <section class="article_detail-info">
+          <div class="article_writer-info">
+            <img src="./images/김형겸_증명사진.jpg" alt="profile" />
+            <span
+              >by
+              <b>Siruzipsa</b>
+            </span>
+          </div>
+          <div class="article_like">
+            <img src="./icons/favorite.svg" alt="Like" />
+            <span>999</span>
+          </div>
+        </section>
+      </article>
+      <article class="article-card">
+        <div class="article-img-wrapper">
+          <img class="article-img" src="./images/번뜩시루.jpg" alt="siru" />
+        </div>
+        <div class="article_text-wrapper">
+          <h2 class="article_text-title">번뜩시루</h2>
+          <p class="article_text-content">놀라자빠질 표정의 시루</p>
+          <span>4일전 · 100개의 댓글</span>
+        </div>
+        <section class="article_detail-info">
+          <div class="article_writer-info">
+            <img src="./images/김형겸_증명사진.jpg" alt="profile" />
+            <span
+              >by
+              <b>Siruzipsa</b>
+            </span>
+          </div>
+          <div class="article_like">
+            <img src="./icons/favorite.svg" alt="Like" />
+            <span>999</span>
+          </div>
+        </section>
       </article>
     </main>
   </body>
