--- a/week1/velog-clone/velogClone.html
+++ b/week1/velog-clone/velogClone.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Siruzipsa</h1>
-      <section class="menu-section">
+      <section class="header__menu-section">
         <img src="./icons/lightmode.svg" alt="lightmode" />
         <img src="./icons/search.svg" alt="search" />
         <button>로그인</button>
@@ -18,171 +18,171 @@
     </header>
     <nav>
       <div>
-        <img class="nav_icon" src="./icons/trending.svg" alt="trending" />
+        <img class="nav__icon" src="./icons/trending.svg" alt="trending" />
         <span>트렌딩</span>
       </div>
       <div>
-        <img class="nav_icon" src="./icons/clock.svg" alt="clock" />
+        <img class="nav__icon" src="./icons/clock.svg" alt="clock" />
         <span>최신</span>
       </div>
     </nav>
     <main>
-      <article class="article-card">
-        <div class="article-img-wrapper">
-          <img class="article-img" src="./images/꿀잠시루.jpg" alt="siru" />
+      <article class="article__card">
+        <div class="article__img-wrapper">
+          <img class="article__img" src="./images/꿀잠시루.jpg" alt="siru" />
         </div>
-        <div class="article_text-wrapper">
-          <h2 class="article_text-title">꿀잠시루</h2>
-          <p class="article_text-content">꿀잠을 자는 시루</p>
+        <div class="article__text-wrapper">
+          <h2 class="article__text-title">꿀잠시루</h2>
+          <p class="article__text-content">꿀잠을 자는 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article_detail-info">
-          <div class="article_writer-info">
+        <section class="article__detail-info">
+          <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
               >by
               <b>Siruzipsa</b>
             </span>
           </div>
-          <div class="article_like">
+          <div class="article__like">
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
         </section>
       </article>
-      <article class="article-card">
-        <div class="article-img-wrapper">
-          <img class="article-img" src="./images/밥솥시루.jpg" alt="siru" />
+      <article class="article__card">
+        <div class="article__img-wrapper">
+          <img class="article__img" src="./images/밥솥시루.jpg" alt="siru" />
         </div>
-        <div class="article_text-wrapper">
-          <h2 class="article_text-title">밥솥시루</h2>
-          <p class="article_text-content">밥솥에 들어간 시루</p>
+        <div class="article__text-wrapper">
+          <h2 class="article__text-title">밥솥시루</h2>
+          <p class="article__text-content">밥솥에 들어간 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article_detail-info">
-          <div class="article_writer-info">
+        <section class="article__detail-info">
+          <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
               >by
               <b>Siruzipsa</b>
             </span>
           </div>
-          <div class="article_like">
+          <div class="article__like">
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
         </section>
       </article>
-      <article class="article-card">
-        <div class="article-img-wrapper">
-          <img class="article-img" src="./images/공격시루.jpg" alt="siru" />
+      <article class="article__card">
+        <div class="article__img-wrapper">
+          <img class="article__img" src="./images/공격시루.jpg" alt="siru" />
         </div>
-        <div class="article_text-wrapper">
-          <h2 class="article_text-title">공격시루</h2>
-          <p class="article_text-content">라이트훅 날리는 시루</p>
+        <div class="article__text-wrapper">
+          <h2 class="article__text-title">공격시루</h2>
+          <p class="article__text-content">라이트훅 날리는 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article_detail-info">
-          <div class="article_writer-info">
+        <section class="article__detail-info">
+          <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
               >by
               <b>Siruzipsa</b>
             </span>
           </div>
-          <div class="article_like">
+          <div class="article__like">
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
         </section>
       </article>
-      <article class="article-card">
-        <div class="article-img-wrapper">
-          <img class="article-img" src="./images/박스시루.jpg" alt="siru" />
+      <article class="article__card">
+        <div class="article__img-wrapper">
+          <img class="article__img" src="./images/박스시루.jpg" alt="siru" />
         </div>
-        <div class="article_text-wrapper">
-          <h2 class="article_text-title">박스시루</h2>
-          <p class="article_text-content">박스에 들어간 시루</p>
+        <div class="article__text-wrapper">
+          <h2 class="article__text-title">박스시루</h2>
+          <p class="article__text-content">박스에 들어간 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article_detail-info">
-          <div class="article_writer-info">
+        <section class="article__detail-info">
+          <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
               >by
               <b>Siruzipsa</b>
             </span>
           </div>
-          <div class="article_like">
+          <div class="article__like">
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
         </section>
       </article>
-      <article class="article-card">
-        <div class="article-img-wrapper">
-          <img class="article-img" src="./images/낚시시루.jpg" alt="siru" />
+      <article class="article__card">
+        <div class="article__img-wrapper">
+          <img class="article__img" src="./images/낚시시루.jpg" alt="siru" />
         </div>
-        <div class="article_text-wrapper">
-          <h2 class="article_text-title">낚시시루</h2>
-          <p class="article_text-content">낚싯대에게 공격당한 시루</p>
+        <div class="article__text-wrapper">
+          <h2 class="article__text-title">낚시시루</h2>
+          <p class="article__text-content">낚싯대에게 공격당한 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article_detail-info">
-          <div class="article_writer-info">
+        <section class="article__detail-info">
+          <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
               >by
               <b>Siruzipsa</b>
             </span>
           </div>
-          <div class="article_like">
+          <div class="article__like">
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
         </section>
       </article>
-      <article class="article-card">
-        <div class="article-img-wrapper">
-          <img class="article-img" src="./images/만두시루.jpg" alt="siru" />
+      <article class="article__card">
+        <div class="article__img-wrapper">
+          <img class="article__img" src="./images/만두시루.jpg" alt="siru" />
         </div>
-        <div class="article_text-wrapper">
-          <h2 class="article_text-title">만두시루</h2>
-          <p class="article_text-content">샤오롱바오닮은 시루</p>
+        <div class="article__text-wrapper">
+          <h2 class="article__text-title">만두시루</h2>
+          <p class="article__text-content">샤오롱바오닮은 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article_detail-info">
-          <div class="article_writer-info">
+        <section class="article__detail-info">
+          <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
               >by
               <b>Siruzipsa</b>
             </span>
           </div>
-          <div class="article_like">
+          <div class="article__like">
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
         </section>
       </article>
-      <article class="article-card">
-        <div class="article-img-wrapper">
-          <img class="article-img" src="./images/번뜩시루.jpg" alt="siru" />
+      <article class="article__card">
+        <div class="article__img-wrapper">
+          <img class="article__img" src="./images/번뜩시루.jpg" alt="siru" />
         </div>
-        <div class="article_text-wrapper">
-          <h2 class="article_text-title">번뜩시루</h2>
-          <p class="article_text-content">놀라자빠질 표정의 시루</p>
+        <div class="article__text-wrapper">
+          <h2 class="article__text-title">번뜩시루</h2>
+          <p class="article__text-content">놀라자빠질 표정의 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article_detail-info">
-          <div class="article_writer-info">
+        <section class="article__detail-info">
+          <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
               >by
               <b>Siruzipsa</b>
             </span>
           </div>
-          <div class="article_like">
+          <div class="article__like">
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
