init : week2 투두리스트 초기세팅

--- a/week2/todo-list/TodoList.html
+++ b/week2/todo-list/TodoList.html
@@ -10,12 +10,12 @@
   <body>
     <header>투두리스트 함드가자</header>
     <nav>
-      <button>오늘만 보기</button>
-      <button>내일만 보기</button>
-      <button>함께 보기</button>
+      <button class="today-button">오늘만 보기</button>
+      <button class="tomorrow-button">내일만 보기</button>
+      <button class="all-button">함께 보기</button>
     </nav>
     <main>
-      <section class="left-section">
+      <section class="left-section" id="">
         <h1>오늘 할 일</h1>
         <div class="new-todo">
           <input type="text" />
@@ -41,5 +41,7 @@
       </section>
     </main>
     <footer></footer>
+
+    <script src="TodoList.js"></script>
   </body>
 </html>
