code review : 시맨틱 태그 우선순위에 따른 태그명 변경

--- a/week1/velog-clone/velogClone.html
+++ b/week1/velog-clone/velogClone.html
@@ -36,7 +36,7 @@
           <p class="article__text-content">꿀잠을 자는 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -48,7 +48,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -59,7 +59,7 @@
           <p class="article__text-content">밥솥에 들어간 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -71,7 +71,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -82,7 +82,7 @@
           <p class="article__text-content">라이트훅 날리는 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -94,7 +94,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -105,7 +105,7 @@
           <p class="article__text-content">박스에 들어간 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -117,7 +117,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -128,7 +128,7 @@
           <p class="article__text-content">낚싯대에게 공격당한 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -140,7 +140,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -151,7 +151,7 @@
           <p class="article__text-content">샤오롱바오닮은 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -163,7 +163,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -174,7 +174,7 @@
           <p class="article__text-content">놀라자빠질 표정의 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -186,7 +186,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
     </main>
   </body>
