chore : 레이아웃에 변화없는 태그 추가

--- a/week2/todo-list/TodoList.html
+++ b/week2/todo-list/TodoList.html
@@ -17,6 +17,7 @@
     <main>
       <section class="left-section" id="">
         <h1>오늘 할 일</h1>
+        <ul></ul>
         <div class="new-todo">
           <input type="text" />
           <button>+</button>
@@ -26,11 +27,11 @@
         <h1>내일 할 일</h1>
         <ul>
           <li>
-            심화과제 완성하기
+            <span>심화과제 완성하기</span>
             <button>X</button>
           </li>
           <li>
-            생각과제 하기
+            <span>생각과제 하기</span>
             <button>X</button>
           </li>
         </ul>
@@ -42,6 +43,7 @@
     </main>
     <footer></footer>
 
-    <script src="TodoList.js"></script>
+    <script src="js/TodoList.js"></script>
+    <script src="js/SelectDate.js"></script>
   </body>
 </html>
