chore : 단순 텍스트 변경

--- a/week2/todo-list/TodoList.html
+++ b/week2/todo-list/TodoList.html
@@ -17,7 +17,7 @@
     <main>
       <section class="left-section" id="">
         <h1>오늘 할 일</h1>
-        <ul></ul>
+        <ul class="left-todo-list"></ul>
         <div class="new-todo">
           <input type="text" />
           <button>+</button>
@@ -25,14 +25,10 @@
       </section>
       <section class="right-section">
         <h1>내일 할 일</h1>
-        <ul>
+        <ul class="right-todo-list">
           <li>
             <span>심화과제 완성하기</span>
-            <button>X</button>
-          </li>
-          <li>
-            <span>생각과제 하기</span>
-            <button>X</button>
+            <button>❌</button>
           </li>
         </ul>
         <div class="new-todo">
