--- a/week2/velog-clone/velogClone.html
+++ b/week2/velog-clone/velogClone.html
@@ -13,7 +13,7 @@
       <section class="header__menu-section">
         <img src="./icons/lightmode.svg" alt="lightmode" />
         <img src="./icons/search.svg" alt="search" />
-        <button>새 글 작성</button>
+        <button class="header__write-button">새 글 작성</button>
       </section>
     </header>
     <nav>
