--- a/week2/velog-clone/write.html
+++ b/week2/velog-clone/write.html
@@ -8,8 +8,11 @@
     <title>2주차 태그창</title>
   </head>
   <body>
-    <input type="text" placeholder="태그를 입력하세요" />
-
+    <ul class="tag-list">
+      <li class="tag">시루의 심리는?</li>
+    </ul>
+    <input class="tag-input" type="text" placeholder="태그를 입력하세요" />
+    <button class="create-btn">태그 생성</button>
     <script src="write.js"></script>
   </body>
 </html>
