chore : 클래스명 변경

--- a/week2/todo-list/TodoList.html
+++ b/week2/todo-list/TodoList.html
@@ -24,7 +24,7 @@
             type="text"
             placeholder="오늘 할 일을 입력하세요"
           />
-          <button class="new-todo-button">+</button>
+          <button class="left__button">+</button>
         </form>
       </section>
       <section class="right__section">
@@ -41,13 +41,12 @@
             type="text"
             placeholder="내일 할 일을 입력하세요"
           />
-          <button class="new-todo-button">+</button>
+          <button class="right__button">+</button>
         </form>
       </section>
     </main>
     <footer></footer>
-
-    <script src="js/TodoList.js"></script>
-    <script src="js/SelectDate.js"></script>
   </body>
+  <script src="js/TodoList.js"></script>
+  <script src="js/SelectDate.js"></script>
 </html>
