--- a/week2/velog-clone/velogClone.html
+++ b/week2/velog-clone/velogClone.html
@@ -43,7 +43,7 @@
           <p class="article__text-content">꿀잠을 자는 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -55,7 +55,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -66,7 +66,7 @@
           <p class="article__text-content">밥솥에 들어간 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -78,7 +78,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -89,7 +89,7 @@
           <p class="article__text-content">라이트훅 날리는 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -101,7 +101,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -112,7 +112,7 @@
           <p class="article__text-content">박스에 들어간 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -124,7 +124,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -135,7 +135,7 @@
           <p class="article__text-content">낚싯대에게 공격당한 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -147,7 +147,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -158,7 +158,7 @@
           <p class="article__text-content">샤오롱바오닮은 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -170,7 +170,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
       <article class="article__card">
         <div class="article__img-wrapper">
@@ -181,7 +181,7 @@
           <p class="article__text-content">놀라자빠질 표정의 시루</p>
           <span>4일전 · 100개의 댓글</span>
         </div>
-        <section class="article__detail-info">
+        <div class="article__detail-info">
           <div class="article__writer-info">
             <img src="./images/김형겸_증명사진.jpg" alt="profile" />
             <span
@@ -193,7 +193,7 @@
             <img src="./icons/favorite.svg" alt="Like" />
             <span>999</span>
           </div>
-        </section>
+        </div>
       </article>
     </main>
   </body>
